--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <head>
         <title>My HTML document</title>
     </head>
-    <body>Welcom to front end!!!!</body>
+    <body>Welcome to front end!!!!</body>
+
 </html>
